<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="137dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/textViewName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUserID" />

    <TextView
        android:id="@+id/textViewUsername"
        android:layout_width="137dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/textViewUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName" />

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="137dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/textViewEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewUsername" />

    <TextView
        android:id="@+id/textViewAddressStreet"
        android:layout_width="137dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/textViewAddressStreet"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewEmail" />

    <TextView
        android:id="@+id/textViewAddressSuite"
        android:layout_width="137dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/textViewAddressSuite"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddressStreet" />

    <TextView
        android:id="@+id/textViewAddressCity"
        android:layout_width="137dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/textViewAddressCity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddressSuite" />

    <TextView
        android:id="@+id/textViewAddressZipcode"
        android:layout_width="137dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/textViewAddressZipcode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddressCity" />

    <TextView
        android:id="@+id/textViewUserID"
        android:layout_width="83dp"
        android:layout_height="21dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:text="@string/textViewUserID"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextUserID"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewUserID"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>